# EDKS-0002-PYTHON-PARA-ENGENHARIA-DE-DADOS-KICKSTART

./: .gitignore  pyproject.toml  readme.md
01_basics_and_recap/: 01_strings.py  02_dates.py  03_list.py  03_list_comprehension.py  04_dict.py  04_dict_comprehension.py  dates.ipynb  dict.ipynb  list.ipynb  readme.md  strings.ipynb
02_working_with_files/: csv.ipynb  json.ipynb  readme.md  txt.ipynb  xml.ipynb  yaml.ipynb  zip.ipynb
03_working_with_http/: 01_get.ipynb  01_get.py  02_post.ipynb  02_post.py  03_update.ipynb  03_update.py  04_delete.ipynb  04_delete.py  readme.md
04_working_with_data/: 01_pandas_basics.ipynb  01_pandas_basics.py  02_pandas_creating_cols.ipynb  02_pandas_creating_cols.py  03_pandas_filtering.ipynb  03_pandas_filtering.py  04_pandas_cleaning.ipynb  04_pandas_cleaning.py  05_pandas_grouping_aggregation.ipynb  05_pandas_grouping_aggregation.py  06_pandas_join.ipynb  06_pandas_join.py  07_pandas_saving_data.ipynb  07_pandas_saving_data.py  08.1_pandas_json.py  08.1_pandas_open_food.ipynb  08.1_pandas_open_food.py  08.2_pandas_json_refactor.py  08.2_pandas_open_food_refactor.ipynb  08.2_pandas_open_food_refactor.py  readme.md
05_working_with_scheduling/: 01_system_monitor.ipynb  01_system_monitor.py  02_bitcoin_rate_monitor.ipynb  02_bitcoin_rate_monitor.py  readme.md
06_working_with_databases/: 01_sqlite_basics.ipynb  01_sqlite_basics.py  02_sqlite_northwind.ipynb  02_sqlite_northwind.py  02_sqlite_select.py  03_sqlite_northwind_pandas.ipynb  03_sqlite_northwind_pandas.py  04_postgres_basics.py  04_postgres_northwind.ipynb  readme.md
(+81 files in other folders)
